<resources>
    <string name="app_name">WeCare</string>

    <!-- Login Page -->
    <string name="loginButton">LOGIN</string>
    <string name="loginSignUpButton">SIGN UP?</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="facebook_app_id">299185540609996</string>
    <string name="fb_login_protocol_scheme">fb299185540609996</string>


    <!-- Sign up Page -->
    <string name="signUpEmail">Email</string>
    <string name="signUpName">Name</string>
    <string name="signUpPhone">Phone</string>
    <string name="signUpPassword">Password</string>
    <string name="signUpConfirmPassword">Confirm Password</string>
    <string name="signUpButton">SIGN UP</string>
</resources>
