<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.csulb.wecare.SignUpActivity"
    style="@style/AppTheme"
    android:background="@drawable/login2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dip"
            android:orientation="vertical"
            android:layout_marginTop="30dip"
            android:layout_margin="10dip">
            <EditText
                android:id="@+id/signUpNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/signUpName"
                android:background="@color/blur_white"
                android:textSize="20sp"
                android:inputType="textPersonName"
                android:padding="10dip"
                android:drawableLeft="@drawable/name"
                android:drawablePadding="10dip"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"/>
            <EditText
                android:id="@+id/sigUpEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signUpEmail"
                android:textColor="@android:color/black"
                android:background="@color/blur_white"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:padding="10dip"
                android:drawableLeft="@drawable/email"
                android:layout_marginBottom="10dip"
                android:drawablePadding="10dip"/>

            <EditText
                android:id="@+id/sigUpPhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blur_white"
                android:hint="@string/signUpPhone"
                android:layout_marginBottom="10dip"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:padding="10dip"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="10dip"/>
            <EditText
                android:id="@+id/signUpPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:hint="@string/signUpPassword"
                android:background="@color/blur_white"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:inputType="numberPassword"
                android:padding="10dip"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="10dip"/>

            <EditText
                android:id="@+id/signUpConfirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:background="@color/blur_white"
                android:hint="@string/signUpConfirmPassword"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:inputType="numberPassword"
                android:padding="10dip"
                android:drawableLeft="@drawable/confirm_password"
                android:drawablePadding="10dip"/>

            <Button
                android:id="@+id/loginSignUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_bg"
                android:text="@string/signUpButton"
                android:textColor="@color/blur_white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dip"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
