<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <com.jgabrielfreitas.core.BlurImageView
                    android:id="@+id/loginBackgroundImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/login2"
                    android:scaleType="fitXY"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    android:padding="15dip">
                <EditText
                    android:id="@+id/loginEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blur_white"
                    android:hint="@string/loginEmail"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"
                    android:padding="10dip"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dip" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"/>
                <EditText
                    android:id="@+id/loginPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blur_white"
                    android:hint="@string/loginPassword"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:inputType="numberPassword"
                    android:padding="10dip"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="10dip"/>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_button_bg"
                    android:text="@string/loginButton"
                    android:textColor="@color/blur_white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="10dip"
                    android:layout_marginTop="10dip" />

                <Button
                        android:id="@+id/loginSignUpButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_sign_up_button_bg"
                        android:text="@string/loginSignUpButton"
                        android:textColor="@color/blur_white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:padding="10dip"
                        android:layout_marginTop="10dip" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:orientation="vertical"
                android:background="@android:color/white">

                <LinearLayout
                    android:id="@+id/loginLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dip"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/loginGoogleButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/white" />

                    <View
                        android:layout_width="0.5dip"
                        android:layout_height="match_parent"
                        android:background="@android:color/black"
                        android:layout_margin="10dip"/>


                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/loginFacebookButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingTop="20sp"
                        android:paddingBottom="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="15dip">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:text="Forgot username or password?"
                        android:gravity="center"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</ScrollView>